--- a/android/app/src/main/res/values/google_maps_api.xml
+++ b/android/app/src/main/res/values/google_maps_api.xml
@@ -1,3 +1,3 @@
 <resources>
-  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">AIzaSyCR1juEVh0dxYMHhKkTwM5ek-4EcfDgbw4</string>
+  <string name="google_maps_key" templateMergeStrategy="preserve" translatable="false">**********(Your own api key)**********</string>
 </resources>
